fixed .snadbox on mobile devices

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -21,6 +21,11 @@
         justify-content: space-between;
         align-items: center;
 
+        @media screen and (max-width: 500px) {
+            flex-direction: column;
+        }
+
+
         code{
             background-color: #53ff62;
             padding: .2rem;
